Fixed: Unwanted space reduction in githubLinkedinlinks in navigation bar, Fixed: Project image is now centered and is covered as whole

--- a/src/components/projects/Card.scss
+++ b/src/components/projects/Card.scss
@@ -39,6 +39,8 @@
             width: 20px;
             height: 20px;
             border-radius: 50%;
+            object-fit: cover;
+            object-position: center;
         }
     }
 
